--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link href="assets/libs/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet">
-  <link href="assets/libs/feather-webfont/dist/feather-icons.css" rel="stylesheet">
-  <link href="assets/libs/simplebar/dist/simplebar.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/theme.min.css">
+  <link href="%PUBLIC_URL%/assets/libs/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/assets/libs/feather-webfont/dist/feather-icons.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/assets/libs/simplebar/dist/simplebar.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/theme.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
@@ -38,13 +38,13 @@
   <div id="root"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
-  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/libs/simplebar/dist/simplebar.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/libs/simplebar/dist/simplebar.min.js"></script>
 
-  <script src="assets/js/theme.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/theme.min.js"></script>
 
-  <script src="assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-  <script src="assets/js/vendors/chart.js"></script>
+  <script src="%PUBLIC_URL%/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/vendors/chart.js"></script>
 
   
 
